--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,11 @@ html,
 body {
   margin: 0;
 //   overflow: hidden;
+@media screen and (min-width: 1024px) {
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
 }
 
 .page-container {
@@ -27,8 +32,12 @@ body {
     }
   }
   @media screen and (min-width: 1024px) {
+    height: calc(100vh - 3.25rem);
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
     section {
-      height: calc(100vh - 3.25rem);
+      height: 100%;
+      scroll-snap-align: start;
     }
   }
 }
