--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -56,5 +56,10 @@
             right: -22px;
             transform: rotate(-45deg);
         }
+
+        ul {
+            text-align: left;
+            line-height: 1.6rem;
+        }
     }
 }
