--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,6 +30,10 @@ body {
       color: #000000;
       margin-bottom: 4rem;
     }
+    
+    .sub-section-title {
+      color: #0F0707;
+    }
   }
   @media screen and (min-width: 1024px) {
     height: calc(100vh - 3.25rem);
