--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,9 +1,9 @@
 .body-container_home {
     background: linear-gradient(128.15deg, rgba(245, 198, 236, 0.77) 9.41%, rgba(255, 157, 157, 0.5) 144.94%);
-    margin: 5rem auto;
-    padding: 6rem;
+    margin: 3rem auto;
+    padding: 4rem 6rem;
     border-radius: 50px 50px 300px 50px;
-
+    flex-grow: 0;
     .body-content_home {
         width: 60%;
         .body-content_title {
@@ -19,8 +19,11 @@
             font-weight: 700;
             line-height: 60px;
             letter-spacing: 0.31em;
-            text-align: left;  
-            margin-bottom: 1rem;           
+            text-align: left;             
+        }
+        .body-content_logo {
+            margin-bottom: 2rem;
+            width: 52%;
         }
         .body-content_description{
             font-family: Work Sans;
