--- a/src/styles/course.scss
+++ b/src/styles/course.scss
@@ -6,7 +6,6 @@
 
     .body-content_course {
         .body-content_title {
-            font-family: Roboto;
             font-size: 40px;
             font-weight: 800;
             line-height: 60px;
@@ -14,11 +13,11 @@
             text-align: left;       
         }
         .body-content_description{
-            font-family: Work Sans;
             font-size: 13px;
             font-weight: 300;
             line-height: 26px;
-            letter-spacing: 0.25em;
+            letter-spacing: 0.1em;
+            word-spacing: 0.2em;
             text-align: left;
             margin-bottom: 2rem; 
         }
@@ -47,7 +46,6 @@
             }
             .subtitle {
                 color: #0F0707;
-                font-family: Work Sans;
                 font-size: 1.3rem;
                 font-style: normal;
                 font-weight: 600;
@@ -56,7 +54,6 @@
             }
             .view-details {
                 color: var(--heading, #0F0707);
-                font-family: Roboto;
                 font-size: 0.875rem;
                 font-style: normal;
                 font-weight: 600;
