--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,8 +1,8 @@
 .body-container_contact {
-    background: rgba(245, 198, 236, 0.25);
-    margin: 4rem auto;
+    background: rgba(245, 198, 236,0.5);
     padding: 3rem 6rem;
-    border-radius: 50px;
+    height: 100%;
+    position: relative;
 
     .body-content_title {
         font-size: 24px;
@@ -50,6 +50,36 @@
         position: absolute;
         right: 4rem;
         top: 5rem;
+    }
+
+    /* Below 560 */
+    @media screen and (max-width: 559px) {
+        /* CSS rules for screens below 560px */
+        padding: 2rem;
+    }
+    
+    /* Between 560 and 767 */
+    @media screen and (min-width: 560px) and (max-width: 767px) {
+        /* CSS rules for screens between 560px and 767px */
+    }
+    
+    /* Between 768 and 1024 */
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        /* CSS rules for screens between 768px and 1024px */
+        padding: 3rem;
+        .contact-us_image {
+            right: 1rem;
+        }
+    }
+    
+    /* Between 1024 and 1280 */
+    @media screen and (min-width: 1023px) and (max-width: 1279px) {
+        /* CSS rules for screens between 1024px and 1280px */
+    }
+    
+    /* Above 1280 */
+    @media screen and (min-width: 1280px) {
+        /* CSS rules for screens above 1280px */
     }
 }
 
