--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,11 +1,25 @@
 .body-container_home {
-    background: linear-gradient(128.15deg, rgba(245, 198, 236, 0.77) 9.41%, rgba(255, 157, 157, 0.5) 144.94%);
-    margin: 3rem auto;
-    padding: 4rem 6rem;
-    border-radius: 50px 50px 300px 50px;
+    background: #fcd6ce;
+    padding: 0;
     flex-grow: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     .body-content_home {
-        width: 60%;
+        position: relative;
+        width: 100%;
+        .slider-content {
+            padding: 4rem 6rem;
+            max-width: 50%;
+        }
+        .slider-image {
+            mix-blend-mode: darken;
+            position: absolute;
+            max-width: 50%;
+            right: 0;
+            top:0;
+        }
         .body-content_title {
             font-size: 40px;
             font-weight: 800;
@@ -33,6 +47,62 @@
             gap: 8px;
             background: linear-gradient(99.05deg, #B82AD7 0.07%, #FF2A9B 106.32%);
             color: #ffffff;
+        }
+    }
+
+    @media screen and (max-width: 559px) {
+        /* CSS rules for screens below 560px */
+        .body-content_home {
+            .slider-image {
+                display: none;
+            }
+            .slider-content {
+                padding: 2rem;
+                max-width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    @media screen and (min-width: 560px) and (max-width: 767px) {
+        /* CSS rules for screens between 560px and 767px */
+        .body-content_home {
+            .slider-image {
+                display: none;
+            }
+            .slider-content {
+                max-width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    
+    /* Between 768 and 1024 */
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+    /* CSS rules for screens between 768px and 1024px */
+        .body-content_home {
+            .slider-image {
+                display: none;
+            }
+            .slider-content {
+                max-width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    
+    /* Between 1024 and 1280 */
+    @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    /* CSS rules for screens between 1024px and 1280px */
+    }
+    
+    /* Above 1280 */
+    @media screen and (min-width: 1280px) {
+    /* CSS rules for screens above 1280px */
+        .body-content_home {
+            .slider-image {
+                max-width: 41%;
+            }
         }
     }
 }
